update repo ignore, sppring.yml, main.tf files

--- a/.gitignore
+++ b/.gitignore
@@ -39,3 +39,9 @@ node_modules/
 /bin/
 /target/
 javawebapp-deployment.yml
+
+# ignore .exe files,
+*.exe
+/terraform/.terraform/providers/
+#keys
+*.pem
